# liyri-cli

./: .gitignore  README.md  install.sh  liyri.sh  pyproject.toml  requirements.txt
liyri/: __init__.py  __main__.py  config.py  display.py  lyrics.py  main.py  player.py
