[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "liyri-cli"
version = "1.0.0"
description = "Animated terminal lyrics viewer for currently playing songs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "dbus-python>=1.3.2",
    "requests>=2.28.0",
    "thefuzz>=0.19.0",
    "python-Levenshtein>=0.20.0",
]

[project.scripts]
liyri = "liyri.main:main"

[tool.setuptools.packages.find]
include = ["liyri*"]
